refactor: og:url의 메타 값 content 값 변경

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="memegle - gif search engine for you" />
     <meta property="og:description" content="Search and share gifs" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://kaori-killer.github.io/perf-basecamp" />
+    <meta property="og:url" content="https://d1vldoasmukncg.cloudfront.net" />
     <meta name="twitter:card" content="summary_large_image" />
 
     <link rel="icon" href="./public/favicon.ico" />
